--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,13 +7,15 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/tayne.js"></script>
+    <script src="src/celeryman.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="dancer">add a dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTayne">add a tayne dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCeleryMan">add a celery man dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTayne">add a tayne dancer</a>
+      <a href="#" class="lineUpButton">line up</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
