--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,7 +15,14 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="dancer">add a dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCeleryMan">add a celery man dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTayne">add a tayne dancer</a>
-      <a href="#" class="lineUpButton">line up</a>    </div>
+      <a href="#" class="lineUpButton">line up</a>
+      <a href="#" class="splitGroup">8th grade dance mode</a>    </div>
     <script src="src/init.js"></script>
+    <div class="audio">
+      <audio controls loop> //autoplay="autoplay"
+        <source src="music/TLBG.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
   </body>
 </html>
