--- a/dancefloor.html
+++ b/dancefloor.html
@@ -16,11 +16,12 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCeleryMan">add a celery man dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTayne">add a tayne dancer</a>
       <a href="#" class="lineUpButton">line up</a>
-      <a href="#" class="splitGroup">8th grade dance mode</a>    </div>
+      <a href="#" class="splitGroup">8th grade dance mode</a>
+      <a href="#" class="concert" data-dancer-maker-function-name="makeCeleryMan">concert mode</a>    </div>
     <script src="src/init.js"></script>
     <div class="audio">
-      <audio controls loop> //autoplay="autoplay"
-        <source src="music/TLBG.mp3" type="audio/mpeg">
+      <audio controls loop autoplay="autoplay">
+        <source src="music/itchy.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
