--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,16 +12,16 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="dancer">add a dancer</a>
+      <a href="#" class="concert">concert mode</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCeleryMan">add a celery man dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTayne">add a tayne dancer</a>
       <a href="#" class="lineUpButton">line up</a>
-      <a href="#" class="splitGroup">8th grade dance mode</a>
-      <a href="#" class="concert" data-dancer-maker-function-name="makeCeleryMan">concert mode</a>    </div>
+      <a href="#" class="tendancers" data-dancer-maker-function-name="makeCeleryMan">make 10 random dancers</a>
+      <a href="#" class="moveAround">make em dance</a>    </div>
     <script src="src/init.js"></script>
     <div class="audio">
-      <audio controls loop autoplay="autoplay">
-        <source src="music/itchy.mp3" type="audio/mpeg">
+      <audio loop > //autoplay="autoplay"
+        <source src="music/candy.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
