Cleaned up CeleryMan gif, audio only plays in concert mode

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,7 +20,7 @@
       <a href="#" class="moveAround">make em dance</a>    </div>
     <script src="src/init.js"></script>
     <div class="audio">
-      <audio loop > //autoplay="autoplay"
+      <audio loop>
         <source src="music/candy.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
