--- a/dancefloor.html
+++ b/dancefloor.html
@@ -21,7 +21,7 @@
     <script src="src/init.js"></script>
     <div class="audio">
       <audio loop>
-        <source src="music/candy.m4a" type="audio/mpeg">
+        <source src="music/candy.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
